--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
+    "ngc:server": "ngc -p tsconfig.server.json",
     "start": "webpack-dev-server --port=4200",
-    "build": "webpack",
+    "build": "npm run build:client",
+    "build:client": "webpack",
+    "build:server": "ngc -p tsconfig.server.json && webpack --progress --config webpack.server.config.js",
+    "build:all": "npm run build:client && npm run build:server",
     "test": "karma start ./karma.conf.js",
     "lint": "ng lint",
     "e2e": "protractor ./protractor.conf.js",
@@ -14,12 +18,15 @@
   },
   "private": true,
   "dependencies": {
+    "express": "^4.15.2",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
     "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-server": "^4.0.0",
+    "@angular/animations": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
@@ -27,10 +34,10 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
+    "@types/express": "^4.0.35",
+    "@types/node": "^7.0.5",
     "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
