--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "webpack-dev-server --port=4200",
     "build": "npm run build:client",
     "build:client": "webpack",
-    "build:server": "ngc -p tsconfig.server.json && webpack --progress --config webpack.server.config.js",
-    "build:all": "npm run build:client && npm run build:server",
+    "build:server": "npm run ngc:server && webpack --progress --config webpack.server.config.js",
+    "build:all": "npm run build:server && npm run build:client",
     "test": "karma start ./karma.conf.js",
     "lint": "ng lint",
     "e2e": "protractor ./protractor.conf.js",
